[gd_scene load_steps=4 format=3 uid="uid://bdclclcremirl"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_ngovx"]
[ext_resource type="Texture2D" uid="uid://cdhnex8qt3j7k" path="res://New Piskel (1).png" id="2_rvgjv"]
[ext_resource type="Texture2D" uid="uid://jyom5vvthypo" path="res://MainMenuButtons.png" id="3_igopj"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ngovx")

[node name="Title Screen BG" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(185.875, -490.5)
scale = Vector2(48.0078, 28.3437)
texture = ExtResource("2_rvgjv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(186, -487)
scale = Vector2(829.5, 727.5)
zoom = Vector2(0.75, 0.75)

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = -26.0
offset_top = -437.0
offset_right = 256.0
offset_bottom = -300.0
scale = Vector2(1.39574, 1.32021)
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Play"]
texture_filter = 1
position = Vector2(146, 68)
scale = Vector2(11.5172, 13.3816)
texture = ExtResource("3_igopj")
vframes = 4

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = -309.0
offset_right = 749.0
offset_bottom = -172.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Quit"]
texture_filter = 1
position = Vector2(103, 68)
scale = Vector2(10.4918, 12.5381)
texture = ExtResource("3_igopj")
vframes = 4
frame = 3

[node name="Controls" type="Button" parent="."]
layout_mode = 0
offset_left = -481.0
offset_top = -314.0
offset_right = -107.0
offset_bottom = -177.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Controls"]
texture_filter = 1
position = Vector2(187, 68)
scale = Vector2(10.4918, 12.5381)
texture = ExtResource("3_igopj")
vframes = 4
frame = 1

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_play_pressed"]
